--- a/230626/src/styles/HomeFooter.module.css
+++ b/230626/src/styles/HomeFooter.module.css
@@ -1,10 +1,9 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 .copyright {
   padding: 30px;
+  margin-top: 50px;
   color: lightgray;
   font-style: italic;
   text-align: right;
