--- a/230626/src/styles/HomeHeader.module.css
+++ b/230626/src/styles/HomeHeader.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 150px;
   padding: 30px;
   box-sizing: border-box;
