--- a/230626/src/styles/HomeMain.module.css
+++ b/230626/src/styles/HomeMain.module.css
@@ -1,5 +1,5 @@
 .home_main {
-  width: 100vw;
+  width: 100%;
   margin-top: 150px;
 }
 .slider_wrapper {
@@ -19,6 +19,9 @@
   overflow: hidden;
 }
 .movieInfoBox{
+  flex: 0 0 230px;
+  width: 230px;
+  height: 400px;
   cursor: pointer;
 }
 .movie-img {
