--- a/230626/src/styles/SearchMain.module.css
+++ b/230626/src/styles/SearchMain.module.css
@@ -1,6 +1,9 @@
+.seacrh_main {
+  width: 100%;
+  margin-top: 150px;
+}
 .filteredMovies_wrapper {
   padding: 50px;
-  margin-top: 150px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
