--- a/230626/src/styles/layout.module.css
+++ b/230626/src/styles/layout.module.css
@@ -3,8 +3,8 @@ body {
 }
 
 .layout {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
