--- a/230626/src/common/style.css
+++ b/230626/src/common/style.css
@@ -4,7 +4,7 @@ body {
 
 .layout {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
